syntax = "proto3";

package coordinator;

service Coordinator {
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc SubmitProof(SubmitProofRequest) returns (SubmitProofResponse) {}
}

message GetTaskRequest {}
message GetTaskResponse {}
message SubmitProofRequest {}
message SubmitProofResponse {}
